--- a/assets/sass/_content-area.scss
+++ b/assets/sass/_content-area.scss
@@ -1,7 +1,20 @@
 #filter {
   background: $grey;
-  // height: 100vh;
-  // width: 30vh;
+  height: 100vh;
+  width: 23%;
+  max-width: 300px;
+
+  .inside {
+    padding: 20px;
+    max-width: 300px;
+  }
+
+  h4 {
+    font-size: 0.9rem;
+    margin-bottom: 25px;
+    text-transform: uppercase;
+    font-weight: 500;
+  }
 
   select {
     background: transparent;
@@ -9,5 +22,36 @@
     font-size: 16px;
     font-weight: 500;
     color: $darkgrey;
+    display: block;
+    margin-bottom: 25px;
+    width: 100%;
+  }
+  .filters {
+    .title {
+      font-size: 0.9rem;
+      display: block;
+      font-weight: 500;
+      margin-bottom: 1rem;
+    }
+    input[type="text"] {
+      border-radius: 5px;
+      font-size: 1rem;
+      padding: 0.3rem;
+      width: 45%;
+      display: inline-block;
+      margin-right: 2.5%;
+      margin-bottom: 1rem;
+      color: $darkgrey;
+    }
+    &.extras {
+      label {
+        display: block;
+        width: 100%;
+        padding: 10px 0;
+        input[type="checkbox"] {
+          float: right;
+        }
+      }
+    }
   }
 }
