--- a/assets/sass/_content-area.scss
+++ b/assets/sass/_content-area.scss
@@ -1,8 +1,16 @@
+#content-area {
+  overflow: auto;
+  width: 100%;
+  min-height: 100vh;
+}
+
 #filter {
   background: $grey;
   height: 100vh;
   width: 23%;
   max-width: 300px;
+  display: inline-block;
+  float: left;
 
   .inside {
     padding: 20px;
@@ -51,6 +59,113 @@
         input[type="checkbox"] {
           float: right;
         }
+      }
+    }
+  }
+}
+
+#listings {
+  width: 70%;
+  float: left;
+  display: inline-block;
+  padding: 15px;
+  background: $offwhite;
+
+  .search-area {
+    input[type="text"] {
+      width: 70%;
+      background: transparent;
+      font-size: 2rem;
+      border: none;
+      border-bottom: 1px solid $lightgrey;
+      margin-bottom: 20px;
+      color: $lightgrey;
+    }
+  }
+  .sortby-area {
+    margin-bottom: 40px;
+    .results {
+      color: $lightgrey;
+      font-size: 0.8rem;
+      display: inline-block;
+    }
+    .sort-options {
+      float: right;
+      select {
+        font-size: 0.9rem;
+        font-weight: 300;
+        border: 1px solid $lightgrey;
+        background: transparent;
+        border-radius: 5px;
+        padding: 5px;
+        display: inline-block;
+        margin-right: 15px;
+        vertical-align: top;
+      }
+      .view {
+        display: inline-block;
+
+        .ico {
+          margin-right: 15px;
+          font-size: 1.5rem;
+        }
+      }
+    }
+  }
+  .listings-results {
+    margin-bottom: 60px;
+
+    .listing {
+      background: #fff;
+      width: 33.33%;
+      // border-radius: 5px;
+      -webkit-box-shadow: 0px 9px 54px -4px rgba(204, 204, 204, 1);
+      -moz-box-shadow: 0px 9px 54px -4px rgba(204, 204, 204, 1);
+      box-shadow: 0px 9px 54px -4px rgba(204, 204, 204, 1);
+    }
+    .listing-img {
+      color: white;
+      padding: 15px;
+      position: relative;
+      background: url("https://image1.apartmentfinder.com/i2/Uh7pU-5z2gxB-ly2VsPGufzUCh0zPkDZH1YOZKjU6u8/110/cielo-apartments-charlotte-nc-saltwater-pool-and-courtyard.jpg")
+        no-repeat center center;
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      -o-background-size: cover;
+      background-size: cover;
+      min-height: 200px;
+      -webkit-border-top-left-radius: 5px;
+      -webkit-border-top-right-radius: 5px;
+      -moz-border-radius-topleft: 5px;
+      -moz-border-radius-topright: 5px;
+      border-top-left-radius: 5px;
+      border-top-right-radius: 5px;
+
+      .details {
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        background: rgba(78, 2, 229, 0.8);
+        /* Old browsers */
+        background: -moz-linear-gradient(
+          -45deg,
+          rgba(78, 2, 229, 0.8) 0%,
+          rgba(157, 28, 237, 0.8) 100%
+        );
+        /* FF3.6-15 */
+        background: -webkit-linear-gradient(
+          -45deg,
+          rgba(78, 2, 229, 0.8) 0%,
+          rgba(157, 28, 237, 0.8) 100%
+        );
+        /* Chrome10-25,Safari5.1-6 */
+        background: linear-gradient(
+          135deg,
+          rgba(78, 2, 229, 0.8) 0%,
+          rgba(157, 28, 237, 0.8) 100%
+        );
       }
     }
   }
