--- a/assets/sass/_content-area.scss
+++ b/assets/sass/_content-area.scss
@@ -147,6 +147,12 @@
         left: 0;
         bottom: 0;
         right: 0;
+        -webkit-border-top-left-radius: 5px;
+        -webkit-border-top-right-radius: 5px;
+        -moz-border-radius-topleft: 5px;
+        -moz-border-radius-topright: 5px;
+        border-top-left-radius: 5px;
+        border-top-right-radius: 5px;
         background: rgba(78, 2, 229, 0.8);
         /* Old browsers */
         background: -moz-linear-gradient(
