--- a/assets/sass/_content-area.scss
+++ b/assets/sass/_content-area.scss
@@ -78,14 +78,15 @@
       font-size: 2rem;
       border: none;
       border-bottom: 1px solid $lightgrey;
+      font-weight: 100;
       margin-bottom: 20px;
-      color: $lightgrey;
+      color: $darkgrey;
     }
   }
   .sortby-area {
     margin-bottom: 40px;
     .results {
-      color: $lightgrey;
+      color: $darkgrey;
       font-size: 0.8rem;
       display: inline-block;
     }
@@ -117,7 +118,8 @@
 
     .listing {
       background: #fff;
-      width: 33.33%;
+
+      // width: 33.33%;
       // border-radius: 5px;
       -webkit-box-shadow: 0px 9px 54px -4px rgba(204, 204, 204, 1);
       -moz-box-shadow: 0px 9px 54px -4px rgba(204, 204, 204, 1);
@@ -140,8 +142,29 @@
       -moz-border-radius-topright: 5px;
       border-top-left-radius: 5px;
       border-top-right-radius: 5px;
+      &:hover {
+        .details {
+          opacity: 1;
+        }
+        .address {
+          opacity: 0;
+        }
+      }
+
+      .address {
+        font-size: 1.3rem;
+        text-transform: capitalize;
+        font-weight: 500;
+        position: absolute;
+        bottom: 20px;
+        opacity: 1;
+        text-shadow: 0px 1px 2px rgba(115, 103, 110, 1);
+        transition: all 0.6s ease-in-out;
+      }
 
       .details {
+        transition: all 0.4s ease-in-out;
+        opacity: 0;
         padding: 30px;
         position: absolute;
         top: 0;
@@ -190,8 +213,7 @@
         .user-details {
           vertical-align: top;
           display: inline-block;
-          width: 70%;
-          margin-left: 20px;
+
           .user-name {
             font-weight: 300;
             font-size: 0.9rem;
@@ -206,20 +228,95 @@
             color: rgba(255, 255, 255, 0.7);
           }
         }
-        .floor-space {
+        .listing-details {
+          margin-top: 20px;
+          margin-bottom: 10px;
           .ico {
             display: inline-block;
-          }
-        }
-        .bedrooms {
-          .ico {
-            display: inline-block;
+            font-size: 20px;
+            margin-right: 15px;
           }
           span {
+            font-weight: 300;
+            font-size: 0.8rem;
             display: inline-block;
+            vertical-align: top;
+            position: relative;
+            top: 3px;
+          }
+          .floor-space {
+            margin-bottom: 20px;
           }
         }
       }
     }
+    .bottom-info {
+      padding: 20px 15px;
+      .price {
+        color: $darkgrey;
+        font-size: 1rem;
+        display: block;
+        margin-bottom: 15px;
+      }
+      .location {
+        font-size: 1.2rem;
+        display: block;
+        margin-top: 10px;
+        color: $lightgrey;
+        .ico {
+          padding-right: 5px;
+        }
+      }
+    }
   }
+}
+
+.view-btn {
+  background: $pink;
+  padding: 8px;
+  font-size: 0.9rem;
+  border-radius: 5px;
+  text-align: center;
+  max-width: 100px;
+  transition: background 0.3s ease-in-out;
+  &:hover {
+    background: #0062f5;
+    cursor: pointer;
+  }
+}
+
+#pagination {
+  text-align: center;
+  .pages {
+    margin: 0 auto;
+    display: inline-block;
+
+    background: white;
+    -webkit-box-shadow: 0px 9px 54px -4px rgba(204, 204, 204, 1);
+    -moz-box-shadow: 0px 9px 54px -4px rgba(204, 204, 204, 1);
+    box-shadow: 0px 9px 54px -4px rgba(204, 204, 204, 1);
+    li {
+      display: inline-block;
+      padding: 20px 30px;
+      &:hover,
+      &.active {
+        background: $pink;
+        font-weight: 700;
+        color: white;
+        cursor: pointer;
+      }
+    }
+  }
+}
+
+.col-md-3 {
+  width: 30%;
+  display: inline-block;
+  vertical-align: top;
+  padding: 0 15px;
+}
+
+.col-md-9 {
+  width: 70%;
+  display: inline-block;
 }
