--- a/assets/sass/variables.scss
+++ b/assets/sass/variables.scss
@@ -2,5 +2,5 @@ $darkpurple: #0c002b;
 $grey: #faf7f5;
 $offwhite: #fffeff;
 $pink: #5edcf8;
-$darkgrey: #858585;
-$lightgrey: #d1cbcd;
+$darkgrey: #7e7e7e;
+$lightgrey: #bfbfbf;
