--- a/assets/sass/_content-area.scss
+++ b/assets/sass/_content-area.scss
@@ -163,9 +163,10 @@
       }
 
       .details {
+        font-weight: 500;
         transition: all 0.4s ease-in-out;
         opacity: 0;
-        padding: 30px;
+        padding-left: 2.5rem;
         position: absolute;
         top: 0;
         left: 0;
@@ -198,8 +199,8 @@
         );
 
         .user-img {
-          width: 35px;
-          height: 35px;
+          width: 45px;
+          height: 45px;
           border-radius: 50%;
           border: 2px solid white;
           display: inline-block;
@@ -307,17 +308,4 @@
       }
     }
   }
-}
-
-.col-md-3 {
-  width: 30%;
-  display: inline-block;
-  vertical-align: top;
-  padding: 0 15px;
-  margin-bottom: 30px;
-}
-
-.col-md-9 {
-  width: 70%;
-  display: inline-block;
 }
