--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,7 +1,8 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700");
-@import "variables";
 @import "reset";
-@import "listings";
+@import "variables";
+@import "grid";
+
 *,
 html,
 body {
