--- a/assets/sass/_content-area.scss
+++ b/assets/sass/_content-area.scss
@@ -287,7 +287,8 @@
 }
 
 #pagination {
-  text-align: center;
+  text-align:center;
+  width: 50rem;
   .pages {
     margin: 0 auto;
     display: inline-block;
