--- a/assets/sass/_content-area.scss
+++ b/assets/sass/_content-area.scss
@@ -4,6 +4,79 @@
   min-height: 100vh;
 }
 
+#banner{
+  background: url("http://www.connectorcountry.com/wp-content/uploads/2017/10/apartments-apartment-interior-design-ideas-small-tumblr-enchanting.jpg")
+   no-repeat center center; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  height: 600px;
+  width:auto;
+
+  .name{
+    font-size: 6rem;
+    position:absolute;
+    top: 15rem;  
+    right:30rem;
+    color:white;
+  }
+
+  .travelbtn{
+    font-weight: 500;
+    font-size: 1.2rem;
+    position:absolute;
+    top: 23rem;  
+    right:36rem;
+    width: 10rem;
+    text-align:center;
+    color:white;
+    background: rgba(12, 182, 233, 0.57);
+    padding: 10px;
+    border-radius: 5px;
+    transition: all .3s ease-in-out;
+    text-decoration: none;
+    cursor:pointer;
+
+
+    &:hover{
+      background: rgba(12, 174, 233, 0.878);
+      transition: all .3s ease-in-out;
+    }
+  
+
+  }
+
+}
+
+
+
+@media only screen and (max-width: 768px){ 
+.name{
+   left:12rem;
+}
+.travelbtn{
+  left:18rem;
+}
+
+}
+
+@media only screen and (max-width: 480px){ 
+.name{
+    left: 30px;
+
+  }
+  .travelbtn{
+    left:8rem;
+  }
+  
+  }
+
+
+
+
+
+
 #filter {
   background: $grey;
   height: 100vh;
