--- a/assets/sass/_content-area.scss
+++ b/assets/sass/_content-area.scss
@@ -99,10 +99,13 @@
   @media only screen and (max-width: 420px){ 
 
 
-            header .logo {
-            display:none;
-
+            header nav a:nth-child(1),
+            header nav a:nth-child(2){
+              display:none;
             }
+           
+
+            
 
             
 
