--- a/assets/sass/_content-area.scss
+++ b/assets/sass/_content-area.scss
@@ -5,7 +5,7 @@
 }
 
 #banner{
-  background: url("http://www.connectorcountry.com/wp-content/uploads/2017/10/apartments-apartment-interior-design-ideas-small-tumblr-enchanting.jpg")
+  background: url("https://g5-assets-cld-res.cloudinary.com/image/upload/q_auto,f_auto,fl_lossy/g5/g5-c-1t2d31r8-berkshire-communities/g5-cl-55mv3nfrp-cook-street/uploads/dgp_9922-edit-web.jpg")
    no-repeat center center; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
